fix jump man

--- a/src/components/GiftBox/giftbox.css
+++ b/src/components/GiftBox/giftbox.css
@@ -32,7 +32,6 @@ body {
   left: 50%;
   transform: translate(-50%);
   bottom: 0;
-  z-index: -1;
 }
 
 .lid {
